--- a/src/main/webapp/wechatbooking/customer/templates/WfrmBookStatus.html
+++ b/src/main/webapp/wechatbooking/customer/templates/WfrmBookStatus.html
@@ -35,6 +35,71 @@
 	    
 </head>
 <body>
+	<header data-am-widget="header" class="am-header am-header-default">
+		<h1 class="am-header-title">
+			<a href="#title-link" class="">订单完成</a>
+		</h1>
+	</header>
+	<br />
+	<div class="am-panel am-panel-default">
+		<div class="am-panel-bd">
+			<div class="am-intro-hd am-text-center">
+				<h2 class="am-intro-title" id="order_flag">
 
+                </h2>
+				<br />
+				<table class="am-table  am-table-radius ">
+					<tr>
+						<td>
+							订单号：
+						</td>
+						<td id="order_id">
+
+						</td>
+					</tr>
+					<tr>
+						<td>
+							支付方式：
+						</td>
+						<td id="pay_type">
+
+						</td>
+					</tr>
+					<tr>
+						<td>
+							交易金额：
+						</td>
+						<td id="order_price">
+
+						</td>
+					</tr>
+					<tr>
+						<td>
+							门店名：
+						</td>
+						<td id="shop_name">
+
+						</td>
+					</tr>
+					<tr>
+						<td>
+							客服电话：
+						</td>
+						<td id="shop_tel">
+
+						</td>
+					</tr>
+					<tr>
+						<td>
+							地址：
+						</td>
+						<td id="shop_address">
+
+						</td>
+					</tr>
+				</table>
+			</div>
+		</div>
+	</div>
 </body>
 </html>
