--- a/src/main/webapp/wechatbooking/management/templates/WfrmOrderStatistics.html
+++ b/src/main/webapp/wechatbooking/management/templates/WfrmOrderStatistics.html
@@ -48,14 +48,14 @@
                                 <li>
                                 	<a href="#" class="am-text-warning">
                                 		<span class="am-icon-btn am-icon-cny"></span>
-	                                    <br />新增订单<br />
+	                                    <br />昨日新增订单<br />
                                         <span id="newOrderCount"></span>
                                 	</a>
                                 </li>
                                 <li>
                                 	<a href="#" class="am-text-danger">
                                 		<span class="am-icon-btn am-icon-times"></span>
-	                                    <br />取消订单<br />
+	                                    <br />昨日取消订单<br />
                                         <span id="cancelOrderCount"></span>
                                 	</a>
                                 </li>
