--- a/src/main/webapp/wechatbooking/customer/templates/WfrmHotelDetail.html
+++ b/src/main/webapp/wechatbooking/customer/templates/WfrmHotelDetail.html
@@ -67,9 +67,9 @@
         		<span id="hotel_address"></span>
 	        </li>
 	        <li>
-	        	<i class="am-icon-phone am-icon-sm"></i><span class="am-badge am-badge-default am-text-lg">
-	            <i class="am-icon-angle-right"></i></span>
-            	<a data-icon='phone' class='ui-btn-right' id="hotel_phone"></a>
+	        	<i class="am-icon-phone am-icon-sm"></i>
+                <span class="am-badge am-badge-default am-text-lg"><i class="am-icon-angle-right"></i></span>
+            	<span data-icon='phone' id="hotel_phone" style="color: dodgerblue;"></span>
 	        </li>
 	    </ul>
 	    <div class="am-alert am-alert-danger" id="my-alert" style="display: none">
@@ -82,7 +82,7 @@
 			    </button><span id="my-startDate"></span>
 	  		</div>
 	  		<div class="am-u-sm-6">
-			    <button type="button" class="am-btn am-btn-default am-margin-right" id="my-end">
+			    <button type="button" class="am-btn am-btn-default am-margin-right" id="my-end" >
 			    	结束日期
 			    </button><span id="my-endDate"></span>
 	  		</div>
