--- a/src/main/webapp/wechatbooking/customer/templates/WfrmMain.html
+++ b/src/main/webapp/wechatbooking/customer/templates/WfrmMain.html
@@ -44,7 +44,7 @@
 		    </a>
 		 	</div>
 	  		<h1 class="am-header-title">
-		    	<a href="#title-link" class="">酒店详情</a>
+		    	<a href="#title-link" class="">酒店列表</a>
 	  		</h1>
 	  		<div class="am-header-right am-header-nav">
 		    	<a href="#right-link" class="">
