--- a/src/main/webapp/wechatbooking/templates/WfrmMain.html
+++ b/src/main/webapp/wechatbooking/templates/WfrmMain.html
@@ -3,9 +3,9 @@
 	<head>
 		<meta charset="utf-8">
 	    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-	    <meta name="description" content="这是一个 index 页面">
+	    <meta name="description" content="主页面框架">
 	    <meta name="keywords" content="index">
-	    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1,user-scalable=no">
+	    <meta name="viewport" content="width=device-width, initial-scale=1, 			maximum-scale=1,user-scalable=no">
 	    <meta name="renderer" content="webkit">
 	    <meta http-equiv="Cache-Control" content="no-siteapp" />
 	    <meta name="apple-mobile-web-app-title" content="Amaze UI" />
@@ -81,9 +81,9 @@
 	        <div class="admin-sidebar am-offcanvas" id="admin-offcanvas">
 	            <div class="am-offcanvas-bar admin-offcanvas-bar">
 	                <ul class="am-list admin-sidebar-list">
-	                    <li>
+	                    <li onclick="onclick_topPage()">
 	                    	<a style="cursor: pointer;">
-	                    		<span onclick="onclick_topPage()" class="am-icon-home"> 首页</span> 
+	                    		<span class="am-icon-home"> 首页</span> 
 	                    	</a>
 	                    </li>
 	                    <li class="admin-parent">
@@ -92,26 +92,23 @@
 	                        	<span class="am-icon-angle-right am-fr am-margin-right"></span>
 	                    	</a>
 	                        <ul class="am-list am-collapse admin-sidebar-sub am-in" id="collapse-nav">
-	                        	<li>
-	                            	<a style="cursor: pointer;" class="am-icon-edit" 										onclick="onclick_hotelInfoMaintain()">
+	                        	<li onclick="onclick_hotelInfoMaintain()">
+	                            	<a style="cursor: pointer;" class="am-icon-edit">
 	                            		 酒店信息维护
 	                            	</a>
 	                            </li>
-	                            <li>
-	                            	<a style="cursor: pointer;" class="am-icon-image"
-	                            		onclick="onclick_roomCaptureManage()">
+	                            <li onclick="onclick_roomCaptureManage()">
+	                            	<a style="cursor: pointer;" class="am-icon-image">
 	                            		 房型图片管理
 	                            	</a>
 	                            </li>
-	                            <li>
-	                            	<a style="cursor: pointer;" class="am-icon-puzzle-piece"
-	                            		onclick="onclick_hotelOutCaptureManage()">
+	                            <li onclick="onclick_hotelOutCaptureManage()">
+	                            	<a style="cursor: pointer;" class="am-icon-puzzle-piece">
 	                            		 酒店外景图管理
 	                            	</a>
 	                            </li>
-	                            <li>
-	                            	<a style="cursor: pointer;" class="am-icon-cogs"
-	                            		onclick="onclick_hotelServiceMatain()">
+	                            <li onclick="onclick_hotelServiceMatain()">
+	                            	<a style="cursor: pointer;" class="am-icon-cogs">
 	                            		 酒店服务设施维护
 	                            	</a>
 	                            </li>
@@ -123,15 +120,13 @@
 	                        	<span class="am-icon-angle-right am-fr am-margin-right"></span>
 	                    	</a>
 	                        <ul class="am-list am-collapse admin-sidebar-sub am-in" id="collapse-nav1">
-	                            <li>
-	                            	<a style="cursor: pointer;" class="am-icon-line-chart" 
-	                            		onclick="onClick_orderCount()"> 
+	                            <li onclick="onClick_orderCount()">
+	                            	<a style="cursor: pointer;" class="am-icon-line-chart"> 
 	                            		订单统计
 	                            	</a>
 	                            </li>
-	                            <li>
-	                            	<a style="cursor: pointer;" class="am-icon-table"
-	                            		onclick="onclick_orderDetail()"> 
+	                            <li onclick="onclick_orderDetail()">
+	                            	<a style="cursor: pointer;" class="am-icon-table"> 
 	                            		订单详情
 	                            	</a>
 	                            </li>
@@ -149,145 +144,11 @@
 	            </div>
 	        </div>
 	        <!-- sidebar end -->
-	        <!-- content start -->
+	        <!-- content -->
 	        <div class="admin-content">
-	            <div class="am-cf am-padding">
-	                <div class="am-fl am-cf">
-	                    <strong class="am-text-primary am-text-lg">首页</strong> / 
-	                    <small>一些常用模块</small>
-	                </div>
-	            </div>
-	            <ul class="am-avg-sm-1 am-avg-md-3 am-margin am-padding am-text-center admin-content-list ">
-	                <li>
-	                	<a style="cursor: pointer;" class="am-text-warning">
-	                		<span class="am-icon-btn am-icon-briefcase"></span>
-	                    	<br />
-							完成订单
-	                    	<span id="finishOrderCount"></span>
-	                	</a>
-	                </li>
-	                <li>
-	                	<a style="cursor: pointer;" class="am-text-danger">
-		                	<span class="am-icon-btn am-icon-recycle"></span>
-		                    <br />
-							 预订订单
-		                    <span id="allOrderCount"></span>
-	                	</a>
-	                </li>
-	                <li>
-	                	<a href="#" class="am-text-secondary">
-	                		<span class="am-icon-btn am-icon-user-md"></span>
-		                    <br />
-							取消订单
-		                    <span id="cancelOrderCount"></span>
-	                	</a>
-	                </li>
-	            </ul>
-	            <div class="am-g">
-	                <div class="am-u-sm-12">
-	                    <div class="am-panel am-panel-default">
-	                        <div class="am-panel-hd">
-	                        	历史数据
-	                        </div>
-	                        <div class="am-panel-bd">
-	                            <div class="am-g">
-	                                <div class="am-u-sm-12">
-	                                    <div id="main" style="height: 400px">
-	                                    </div>
-	                                    <br />
-	                                </div>
-	                            </div>
-	                        </div>
-	                    </div>
-	                </div>
-	            </div>
-	            <div class="am-g">
-	                <div class="am-u-sm-12">
-	                    <div class="am-g">
-	                        <div class="am-u-sm-12">
-	                            <div class="am-tabs" data-am-tabs="">
-	                                <ul class="am-tabs-nav am-nav am-nav-tabs">
-	                                    <li class="am-active">
-	                                    	<a href="#tab2-1">
-	                                    		今日抵店
-	                                    	</a>
-	                                    </li>
-	                                    <li class="">
-	                                    	<a href="/react">
-	                                    		新增订单
-	                                        	<span class="am-badge am-badge-danger">NEW</span>
-	                                    	</a>
-	                                    </li>
-	                                </ul>
-	                                <div class="am-tabs-bd">
-	                                    <div class="am-tab-panel am-fade am-active am-in" id="tab2-1">
-	                                        <table class="am-table am-table-bd am-table-striped 												admin-content-table ">
-	                                            <thead>
-	                                                <tr>
-	                                                    <th>
-	                                                        	预订房型
-	                                                    </th>
-	                                                    <th>
-	                                                        	客户姓名
-	                                                    </th>
-	                                                    <th>
-	                                                        	预订价格
-	                                                    </th>
-	                                                    <th>
-	                                                        	联系电话
-	                                                    </th>
-	                                                    <th>
-	                                                        	订单状态
-	                                                    </th>
-	                                                    <th>
-	                                                        	预订时间
-	                                                    </th>
-	                                                    <th>
-	                                                        	到店/离店
-	                                                    </th>
-	                                                </tr>
-	                                            </thead>
-	                                        </table>
-	                                    </div>
-	                                    <div class="am-tab-panel am-fade" id="tab2-2">
-	                                        <table class="am-table am-table-bd am-table-striped 												admin-content-table ">
-	                                            <thead>
-	                                                <tr>
-	                                                    <th>
-	                                                        	预订房型
-	                                                    </th>
-	                                                    <th>
-	                                                       		 客户姓名
-	                                                    </th>
-	                                                    <th>
-	                                                        	预订价格
-	                                                    </th>
-	                                                    <th>
-	                                                       		 联系电话
-	                                                    </th>
-	                                                    <th>
-	                                                        	订单状态
-	                                                    </th>
-	                                                    <th>
-	                                                        	预订时间
-	                                                    </th>
-	                                                    <th>
-	                                                        	到店/离店
-	                                                    </th>
-	                                                </tr>
-	                                            </thead>
-	                                        </table>
-	                                    </div>
-	                                </div>
-	                            </div>
-	                        </div>
-	                        <br />
-	                    </div>
-	                    <br />
-	                </div>
-	                <!-- content end -->
-	            </div>
+	            <iframe name="displayContent" style="width: 100%;height: 620px;"></iframe>
 	        </div>
+	        <!-- content end-->
 	        <a class="am-icon-btn am-icon-th-list am-show-sm-only admin-menu" data-am-offcanvas="{target: 				'#admin-offcanvas'}">
 	        </a>
 	        <footer>
