--- a/src/main/webapp/wechatbooking/templates/WfrmHomePage.html
+++ b/src/main/webapp/wechatbooking/templates/WfrmHomePage.html
@@ -13,7 +13,8 @@
 	    <link rel="apple-touch-icon-precomposed" href="../api/AmazeUI/i/app-icon72x72@2x.png">
 	    <link rel="stylesheet" href="../api/AmazeUI/css/amazeui.min.css" />
 	    <link rel="stylesheet" href="../api/AmazeUI/css/admin.css">
-	    <script src="http://echarts.baidu.com/build/dist/echarts.js"></script>
+	    <script src="../api/Echart/dist/echarts.js"></script>
+	    <script src="../js/common.js"></script>
 	    <script src="../js/WfrmHomePage.js"></script>
 	    <!--[if lt IE 9]>
 		<script src="http://libs.baidu.com/jquery/1.11.1/jquery.min.js"></script>
