--- a/src/main/webapp/wechatbooking/templates/WfrmHotelInfo.html
+++ b/src/main/webapp/wechatbooking/templates/WfrmHotelInfo.html
@@ -13,7 +13,7 @@
 	    <link rel="apple-touch-icon-precomposed" href="../api/AmazeUI/i/app-icon72x72@2x.png">
 	    <link rel="stylesheet" href="../api/AmazeUI/css/amazeui.min.css" />
 	    <link rel="stylesheet" href="../api/AmazeUI/css/admin.css">
-	    <script src="http://echarts.baidu.com/build/dist/echarts.js"></script>
+	    <script src="../js/common.js"></script>
 	    <script src="../js/WfrmHotelInfo.js"></script>
 	    <!--[if lt IE 9]>
 		<script src="http://libs.baidu.com/jquery/1.11.1/jquery.min.js"></script>
@@ -51,41 +51,41 @@
                         	</div>
 						    <div class="am-form-group am-form-icon am-form-feedback am-u-sm-8 am-u-md-4"> <!--am-form-success 整个输入框变为绿色，表示验证通过 -->
 						    	<input type="text" class="am-form-field am-input-sm" placeholder="请输入酒店名称   必填">
-						    	<!--<span class="am-icon-check"></span>--><!-- 验证通过后显示此对勾，表示验证通过-->
 							</div>
 							<div class="am-hide-sm-only am-u-md-6"> <!-- 酒店名称错误提示信息 -->
                             	
 						    </div>
 						</div>
-                   
-                        <div class="am-g am-margin-top">
+						<!-- 联系电话 -->
+                   		<div class="am-g am-margin-top">
 					    	<div class="am-u-sm-4 am-u-md-2 am-text-right">
                             	联系电话 
                         	</div>
-						    <div class="am-form-group am-form-icon am-form-feedback am-u-sm-8 am-u-md-4"> <!--am-form-success 整个输入框变为绿色，表示验证通过 -->
+						    <div class="am-form-group am-form-icon am-form-feedback am-u-sm-8 am-u-md-4">
 						    	<input type="text" class="am-form-field am-input-sm" placeholder="请输入联系电话">
-						    	<!--<span class="am-icon-check"></span>--><!-- 验证通过后显示此对勾，表示验证通过-->
 							</div>
-							<div class="am-hide-sm-only am-u-md-6"> <!-- 联系电话错误提示信息 -->
+							<div class="am-hide-sm-only am-u-md-6"> <!-- 酒店名称错误提示信息 -->
                             	
 						    </div>
 						</div>
-                        <div class="am-g am-margin-top">
-                            <div class="am-u-sm-4 am-u-md-2 am-text-right">
-                                酒店地址
-                            </div>
-                            <div class="am-u-sm-8 am-u-md-4">
-                                <asp:TextBox runat="server" ID="mcAddress" name="mcAddress" class="am-input-sm" />
-                            </div>
-                            <div class="am-hide-sm-only am-u-md-6">
-                                选填</div>
-                        </div>
+						<!-- 酒店地址 -->
+                   		<div class="am-g am-margin-top">
+					    	<div class="am-u-sm-4 am-u-md-2 am-text-right">
+                            	酒店地址 
+                        	</div>
+						    <div class="am-form-group am-form-icon am-form-feedback am-u-sm-8 am-u-md-4">
+						    	<input type="text" class="am-form-field am-input-sm" placeholder="请输入酒店地址">
+							</div>
+							<div class="am-hide-sm-only am-u-md-6"> <!-- 酒店名称错误提示信息 -->
+                            	
+						    </div>
+						</div>
                         <div class="am-g am-margin-top-sm">
                             <div class="am-u-sm-12 am-u-md-2 am-text-right admin-form-text">
                                 内容描述
                             </div>
                             <div class="am-u-sm-12 am-u-md-10">
-                                <asp:TextBox runat="server" Rows="10" TextMode="MultiLine" ID="mcDesp" name="mcDesp" />
+                                <textarea runat="server" Rows="9" class="am-form-field am-input-sm" placeholder="请输入内容描述"></textarea>
                             </div>
                         </div>
                     </div>
@@ -94,12 +94,11 @@
             </div>
         </div>
         <div class="am-margin">
-            <button type="button" onclick="Submit()" class="am-btn am-btn-primary am-btn-xs">
-                提交保存</button>
-            <button type="button" onclick="Reset()" class="am-btn am-btn-primary am-btn-xs">
-                放弃保存</button>
+            <button type="button" onclick="onclick_btnSave()" class="am-btn am-btn-primary am-btn-xs">
+            	保存
+            	<i class="am-icon-spinner am-icon-spin"></i>
+            </button>
         </div>
-        <!-- content end -->
         </form>
         <div class="am-modal am-modal-alert" tabindex="-1" id="my-alert">
             <div class="am-modal-dialog">
@@ -113,9 +112,5 @@
                 </div>
             </div>
         </div>
-    </div>
-    	<a class="am-icon-btn am-icon-th-list am-show-sm-only admin-menu" data-am-offcanvas="{target: 		'#admin-offcanvas'}">
-    	</a>
-   		<footer class="am-footer-default">
 	</body>
 </html>
