--- a/src/main/webapp/wechatbooking/templates/WfrmLogin.html
+++ b/src/main/webapp/wechatbooking/templates/WfrmLogin.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="../api/AmazeUI/css/amazeui.min.css" />
     <script src="../api/AmazeUI/js/jquery.min.js" type="text/javascript"></script>
     <script src="../api/AmazeUI/js/amazeui.js" type="text/javascript"></script>
+    <script src="../js/common.js"></script>
     <script src="../js/WfrmLogin.js" type="text/javascript"></script>
     <style>
         .header
