完成图片上传相关功能 完善登录界面后台交互，访问页面报错

--- a/src/main/webapp/wechatbooking/templates/WfrmHotelInfo.html
+++ b/src/main/webapp/wechatbooking/templates/WfrmHotelInfo.html
@@ -108,7 +108,7 @@
                     保存成功！
                 </div>
                 <div class="am-modal-footer">
-                    <span class="am-modal-btn">确定</span>
+                    <a class="am-modal-btn">确定</a>
                 </div>
             </div>
         </div>
