--- a/src/main/webapp/wechatbooking/templates/WfrmMain.html
+++ b/src/main/webapp/wechatbooking/templates/WfrmMain.html
@@ -5,7 +5,7 @@
 	    <meta http-equiv="X-UA-Compatible" content="IE=edge">
 	    <meta name="description" content="主页面框架">
 	    <meta name="keywords" content="index">
-	    <meta name="viewport" content="width=device-width, initial-scale=1, 			maximum-scale=1,user-scalable=no">
+	    <meta name="viewport" content="width=device-width, initial-scale=1,maximum-scale=1,user-scalable=no">
 	    <meta name="renderer" content="webkit">
 	    <meta http-equiv="Cache-Control" content="no-siteapp" />
 	    <meta name="apple-mobile-web-app-title" content="Amaze UI" />
@@ -16,6 +16,7 @@
 	    <link rel="stylesheet" href="../api/AmazeUI/css/admin.css">
 	    <script src="../api/Echart/dist/echarts.js"></script>
 	    <script src="../js/common.js"></script>
+	    <script src="../js/resource.js"></script>
 	    <script src="../js/WfrmMain.js"></script>
 	    <!--[if lt IE 9]>
 		<script src="http://libs.baidu.com/jquery/1.11.1/jquery.min.js"></script>
@@ -139,7 +140,7 @@
 	                        <p>
 	                        	<span class="am-icon-bookmark"></span> 公告
 	                        </p>
-	                        <p>时光静好，与君语；细水流年，与君同。—— TCSL</p>
+	                        <p id="announcement"></p>
 	                    </div>
 	                </div>
 	            </div>
