--- a/src/main/webapp/wechatbooking/templates/WfrmLogin.html
+++ b/src/main/webapp/wechatbooking/templates/WfrmLogin.html
@@ -2,7 +2,7 @@
 <html>
 <head lang="en">
     <meta charset="UTF-8">
-    <title>登陆 | 微信预订后台管理</title>
+    <title>登录 | 微信预订后台管理</title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <meta name="format-detection" content="telephone=no">
@@ -13,7 +13,9 @@
     <link rel="stylesheet" href="../api/AmazeUI/css/amazeui.min.css" />
     <script src="../api/AmazeUI/js/jquery.min.js" type="text/javascript"></script>
     <script src="../api/AmazeUI/js/amazeui.js" type="text/javascript"></script>
+    <script src="../api/jQuery/jquery.min.js"></script>
     <script src="../js/common.js"></script>
+    <script src="../js/resource.js"></script>
     <script src="../js/WfrmLogin.js" type="text/javascript"></script>
     <style>
         .header
@@ -42,12 +44,6 @@
     </div>
     <div class="am-g">
         <div class="am-u-lg-6 am-u-md-8 am-u-sm-centered">
-            <div class="am-alert am-alert-warning am-hide" id="my-alert" data-am-alert>
-                <button type="button" class="am-close">
-                    &times;
-                </button>
-                <p id="my-msg">没什么可给你，但求凭这阙歌。谢谢你风雨里，都不退愿陪着我。</p>
-            </div>
             <div class="am-form">
                 <label for="shopid">商户号:</label>
                 <input type="text" name="" id="shopid" value="">
@@ -71,7 +67,7 @@
             </div>
             <hr>
             <p>
-                Copyright © 1998-2015 TCSL</p>
+                Copyright © 1998-2016 TCSL</p>
         </div>
     </div>
 </body>
