--- a/src/main/webapp/wechatbooking/templates/WfrmMain.html
+++ b/src/main/webapp/wechatbooking/templates/WfrmMain.html
@@ -33,7 +33,7 @@
 	</head>
 	<body>
 	    <!--[if lte IE 9]>
-		<p class="browsehappy">你正在使用<strong>过时</strong>的浏览器，Amaze UI 暂不支持。 请 <a href="http://browsehappy.com/" target="_blank">升级浏览器</a>
+		<p class="browsehappy">你正在使用<strong>过时</strong>的浏览器，微信预订 暂不支持。 请 <a href="http://browsehappy.com/" target="_blank">升级浏览器</a>
 	  	以获得更好的体验！</p>
 		<![endif]-->
 	    <header class="am-topbar admin-header">
@@ -151,12 +151,12 @@
 	            <iframe name="displayContent" style="width: 100%;height: 620px;"></iframe>
 	        </div>
 	        <!-- content end-->
-	        <a class="am-icon-btn am-icon-th-list am-show-sm-only admin-menu" data-am-offcanvas="{target: 				'#admin-offcanvas'}">
+	        <a class="am-icon-btn am-icon-th-list am-show-sm-only admin-menu" data-am-offcanvas="{target:'#admin-offcanvas'}">
 	        </a>
 	        <footer>
-	  <hr>
-	  <p class="am-padding-left">Copyright © 1998-2015 TSCL</p>
-	</footer>
-	        
+	  			<hr>
+	  			<p class="am-padding-left">Copyright © 1998-2015 TCSL</p>
+			</footer>
+		</div>
 	</body>
 </html>
