完成酒店服务设施维护模块，登录接口联调 订单统计 订单详情 前端部分 信息维护后端部分，待完成

--- a/src/main/webapp/wechatbooking/templates/WfrmLogin.html
+++ b/src/main/webapp/wechatbooking/templates/WfrmLogin.html
@@ -44,6 +44,12 @@
     </div>
     <div class="am-g">
         <div class="am-u-lg-6 am-u-md-8 am-u-sm-centered">
+            <div class="am-alert am-alert-warning am-hide" id="my-alert" data-am-alert>
+                <button type="button" class="am-close">
+                    &times;</button>
+                <p id="my-msg">
+                    没什么可给你，但求凭这阙歌。谢谢你风雨里，都不退愿陪着我。</p>
+            </div>
             <div class="am-form">
                 <label for="shopid">商户号:</label>
                 <input type="text" name="" id="shopid" value="">
