订单统计 初始化部分完成  其余按钮操作未完成 订单详情未完成

--- a/src/main/webapp/wechatbooking/templates/WfrmHomePage.html
+++ b/src/main/webapp/wechatbooking/templates/WfrmHomePage.html
@@ -131,6 +131,8 @@
                                                 </th>
                                             </tr>
                                         </thead>
+                                        <tbody id="todayOrderList">
+                                        </tbody>
                                     </table>
                                 </div>
                                 <div class="am-tab-panel am-fade" id="tab2-2">
@@ -160,6 +162,8 @@
                                                 </th>
                                             </tr>
                                         </thead>
+                                        <tbody id="newOrderList">
+                                        </tbody>
                                     </table>
                                 </div>
                             </div>
