--- a/src/main/webapp/wechatbooking/templates/WfrmOrderStatistics.html
+++ b/src/main/webapp/wechatbooking/templates/WfrmOrderStatistics.html
@@ -89,11 +89,11 @@
                                             <button type="button" class="am-btn am-btn-default" id="date_30" onclick="onclick_btnDate_30()">
                                                 30天</button>
                                             <button type="button" id="my-strDate" class="am-btn am-btn-default">
-                                                2014-12-20</button>
+                                            </button>
                                             <button type="button" class="am-btn am-btn-default">
                                                 至</button>
                                             <button type="button" id="my-endDate" class="am-btn am-btn-default">
-                                                2014-12-27</button>
+                                            </button>
                                         </div>
                                     </div>
                                 </div>
