--- a/src/main/webapp/wechatbooking/templates/WfrmOrderDetail.html
+++ b/src/main/webapp/wechatbooking/templates/WfrmOrderDetail.html
@@ -14,7 +14,9 @@
 	    <link rel="stylesheet" href="../api/AmazeUI/css/amazeui.min.css" />
 	    <link rel="stylesheet" href="../api/AmazeUI/css/admin.css">
 	    <link rel="stylesheet" type="text/css" href="../api/webuploader/webuploader.css" />
+	    <link rel="stylesheet" type="text/css" href="../api/jQuery/jquery.dataTables.css"   />
 	    <script src="../api/jQuery/jquery.min.js"></script>
+	    <script src="../api/jQuery/jquery.dataTables.js"></script>
 	    <script src="../api/Echart/dist/echarts.js"></script>
 	    <script src="../js/WfrmOrderDetail.js"></script>
 	    <script src="../js/common.js"></script>
@@ -26,10 +28,10 @@
 	    <script src="assets/js/amazeui.legacy.js"></script>
 	    <![endif]-->
 	    <!--[if (gte IE 9)|!(IE)]><!-->
-	    <script src="../api/AmazeUI/js/jquery.min.js"></script>
-	    <script src="../api/AmazeUI/js/amazeui.min.js"></script>
+	    <script src="../api/AmazeUI/js/amazeui.min.js"></script>	   
 	    <!--<![endif]-->
 	    <script src="../api/AmazeUI/js/app.js"></script>
+	    
 </head>
 <body>
 	<div class="am-cf am-padding">
@@ -89,7 +91,7 @@
 	                            </tr>
 	                        </tfoot>
 	                        <tbody> 
-	                            <!--<asp:Literal Text="text" runat="server" ID="ltlOrderHtml" />-->
+								
 	                        </tbody>
 	                    </table>
 	                </div>
