--- a/src/main/webapp/wechatbooking/customer/templates/WfrmMain.html
+++ b/src/main/webapp/wechatbooking/customer/templates/WfrmMain.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8">
 	    <meta http-equiv="X-UA-Compatible" content="IE=edge">
 	    <title>酒店列表</title>
-	    <meta name="description" content="酒店列表">
+	    <meta name="description" content="预订/我的订单">
 	    <meta name="keywords" content="index">
 	    <meta name="viewport" content="width=device-width, initial-scale=1,maximum-scale=1,user-scalable=no">
 	    <meta name="renderer" content="webkit">
