--- a/src/main/webapp/wechatbooking/customer/templates/WfrmMyOrder.html
+++ b/src/main/webapp/wechatbooking/customer/templates/WfrmMyOrder.html
@@ -66,7 +66,7 @@
 	        </ul>
 	        <div class="am-tabs-bd">
 	            <div class="am-tab-panel am-fade am-active am-in" id="tab2-1">
-	                <div class='am-panel am-panel-default'>
+	                <!--<div class='am-panel am-panel-default'>
                     <div class='am-panel-bd'>
                         <strong>{0}</strong>
                         <br />
@@ -91,14 +91,26 @@
                         </button>
                     </div>
                 </div>
-	            </div>
-	            <div class="am-tab-panel am-fade" id="tab2-2">
-	                312312
-	            </div>
+	            </div>-->	            
+	        	</div>
+	        	<div class="am-tab-panel am-fade" id="tab2-2">
+            	</div>
 	            <div class="am-tab-panel am-fade" id="tab2-3">
-	                12312
 	            </div>
-	        </div>
 	    </div>
+	    <div class="am-modal am-modal-confirm" tabindex="-1" id="my-confirm">
+	  		<div class="am-modal-dialog">
+	    		<div class="am-modal-hd">
+	    			微信查询
+	    		</div>
+	    		<div class="am-modal-bd">
+	      			您，确定要取消该订单吗？
+	    		</div>
+	    		<div class="am-modal-footer">
+	      			<span class="am-modal-btn" data-am-modal-cancel>取消</span>
+	      			<span class="am-modal-btn" data-am-modal-confirm>确定</span>
+	    		</div>
+	  		</div>
+  		</div>
 	</body>
 </html>
