完成 酒店详情页面主体部分 支付未完成  酒店设施信息未完成  上传图片 房间id需要修改 查询图片路径未完成

--- a/src/main/webapp/wechatbooking/customer/templates/WfrmHotelDetail.html
+++ b/src/main/webapp/wechatbooking/customer/templates/WfrmHotelDetail.html
@@ -58,22 +58,22 @@
 	        		<i class="am-icon-angle-right"></i>
 	        	</span>
 	        	<strong id="hotel_name">
-	            	天财大酒店
+	            	<!--天财大酒店-->
 	        	</strong>
 	        </li>
 	        <li>
 	        	<i class="am-icon-map-marker am-icon-sm"></i>
         		<span class="am-badge am-badge-default am-text-lg"><i class="am-icon-angle-right "></i></span>
-        		<span id="hotel_address">12312</span>
+        		<span id="hotel_address"><!--12312--></span>
 	        </li>
 	        <li>
 	        	<i class="am-icon-phone am-icon-sm"></i><span class="am-badge am-badge-default am-text-lg">
 	            <i class="am-icon-angle-right"></i></span><strong>
-            	<a data-icon='phone' class='ui-btn-right' id="hotel_phone">15900345728</a>
+            	<a data-icon='phone' class='ui-btn-right' id="hotel_phone"><!--15900345728--></a>
 	        </li>
 	    </ul>
 	    <div class="am-alert am-alert-danger" id="my-alert" style="display: none">
-  			<p>开始日期应小于结束日期！</p>
+  			<span>开始日期应小于结束日期！</span>
 		</div>
 		<div class="am-g">
 	  		<div class="am-u-sm-6">
@@ -91,14 +91,7 @@
 	        <!--列表标题-->
 	        <div class="am-list-news-bd">
 	            <ul class="am-list" id="myRoomList">
-                    <li class="am-g am-list-item-desced am-list-item-thumbed am-list-item-thumb-left">
-	                    <div class="am-u-sm-4 am-list-thumb">
-	                        <img src="../images/hotelDefault.jpg"/>
-	                    </div>
-	                    <span class="am-badge am-badge-warning am-text-lg">预订</span>
-	                    <span class="am-badge am-badge-warning am-text-lg">￥200</span> 
-	                    <strong>商务大床房</strong>
-	                </li>
+                    
 	            </ul>
 	        </div>
 	    </div>
