完成图片上传和获取部分的修改，房型改为从后台获取 酒店详情中 预订  商户信息两个页面部分未完成 微信查询中 支付未完成

--- a/src/main/webapp/wechatbooking/management/templates/WfrmUploadPhoto.html
+++ b/src/main/webapp/wechatbooking/management/templates/WfrmUploadPhoto.html
@@ -40,7 +40,7 @@
         <hr />
         <div class="am-g">
             <div class="am-u-sm-12 am-u-sm-centered">
-                <h2 id="roomName">
+                <h2 id="roomTypeName">
                 </h2>
                 <ul class="am-avg-sm-2 am-avg-md-4 am-avg-lg-6 am-margin gallery-list" id="fileList">
                 </ul>
