--- a/src/main/webapp/wechatbooking/management/templates/WfrmRoomPhoto.html
+++ b/src/main/webapp/wechatbooking/management/templates/WfrmRoomPhoto.html
@@ -13,8 +13,8 @@
 	    <link rel="apple-touch-icon-precomposed" href="../api/AmazeUI/i/app-icon72x72@2x.png">
 	    <link rel="stylesheet" href="../api/AmazeUI/css/amazeui.min.css" />
 	    <link rel="stylesheet" href="../api/AmazeUI/css/admin.css">
-	    <script src="../js/common.js"></script>
 	    <script src="../js/WfrmRoomPhoto.js"></script>
+	    <script src="../js/common.js"></script>
 	    <!--[if lt IE 9]>
 		<script src="http://libs.baidu.com/jquery/1.11.1/jquery.min.js"></script>
 		<script src="http://cdn.staticfile.org/modernizr/2.8.3/modernizr.js"></script>
@@ -46,82 +46,8 @@
                                 </th>
                             </tr>
                         </thead>
-                        <tbody>
-                            <tr>
-                                <td>
-                                    <span style="color: #23ABF0;">标准间</span>
-                                </td>                               
-                                <td>
-                                    <div class='am-btn-toolbar'>
-                                        <div class='am-btn-group am-btn-group-xs'>
-                                            <button onclick="onclick_btnUploadPhoto('standard_room')" class='am-btn am-btn-default 													am-btn-xs am-text-secondary'>
-                                                <span class='am-icon-upload'></span> 上传图片</button>
-   											<button onclick="onclick_btnLookPhoto('standard_room')" class='am-btn am-btn-default am-btn-xs 													am-hide-sm-only'>
-   												<span class='am-icon-photo'></span> 查看图片</button>
-                                        </div>
-                                    </div>
-                                </td>
-                            </tr>
-                            <tr>
-                                <td>
-                                	<span style="color: #23ABF0;">单人套房</span>
-                                </td>                               
-                                <td>
-                                    <div class='am-btn-toolbar'>
-                                        <div class='am-btn-group am-btn-group-xs'>
-                                            <button onclick="onclick_btnUploadPhoto('single_suite')" class='am-btn am-btn-default am-btn-xs am-text-secondary'>
-                                                <span class='am-icon-upload'></span> 上传图片</button>
-   											<button onclick="onclick_btnLookPhoto('single_suite')" class='am-btn am-btn-default am-btn-xs 													am-hide-sm-only'>
-   												<span class='am-icon-photo'></span> 查看图片</button>
-                                        </div>
-                                    </div>
-                                </td>
-                            </tr>
-                            <tr>
-                                <td>
-                                	<span style="color: #23ABF0;">豪华单间</span>
-                                </td>                               
-                                <td>
-                                    <div class='am-btn-toolbar'>
-                                        <div class='am-btn-group am-btn-group-xs'>
-                                            <button onclick="onclick_btnUploadPhoto('deluxe_single_room')" class='am-btn am-btn-default am-btn-xs am-text-secondary'>
-                                                <span class='am-icon-upload'></span> 上传图片</button>
-   											<button onclick="onclick_btnLookPhoto('deluxe_single_room')" class='am-btn am-btn-default am-btn-xs 													am-hide-sm-only'>
-   												<span class='am-icon-photo'></span> 查看图片</button>
-                                        </div>
-                                    </div>
-                                </td>
-                            </tr>
-                            <tr>
-                                <td>
-                                	<span style="color: #23ABF0;">双人套房</span>
-                                </td>                               
-                                <td>
-                                    <div class='am-btn-toolbar'>
-                                        <div class='am-btn-group am-btn-group-xs'>
-                                            <button onclick="onclick_btnUploadPhoto('double_suite')" class='am-btn am-btn-default am-btn-xs am-text-secondary'>
-                                                <span class='am-icon-upload'></span> 上传图片</button>
-   											<button onclick="onclick_btnLookPhoto('double_suite')" class='am-btn am-btn-default am-btn-xs 													am-hide-sm-only'>
-   												<span class='am-icon-photo'></span> 查看图片</button>
-                                        </div>
-                                    </div>
-                                </td>
-                            </tr>
-                            <tr>
-                                <td>
-                                	<span style="color: #23ABF0;">豪华商务单人间</span>
-                                </td>                               
-                                <td>
-                                    <div class='am-btn-toolbar'>
-                                        <div class='am-btn-group am-btn-group-xs'>
-                                            <button onclick="onclick_btnUploadPhoto('deluxe_commerce_room')" class='am-btn am-btn-default 													am-btn-xs am-text-secondary'>
-                                                <span class='am-icon-upload'></span> 上传图片</button>
-   											<button onclick="onclick_btnLookPhoto('deluxe_commerce_room')" class='am-btn am-btn-default am-btn-xs 													am-hide-sm-only'>
-   												<span class='am-icon-photo'></span> 查看图片</button>
-                                        </div>
-                                    </div>
-                                </td>
-                            </tr>
+                        <tbody id="room_list">
+                            
                         </tbody>
                     </table>
                     <br />
