预订页面未做输入验证 待支付 酒店详情中 预订  商户信息两个页面部分未完成 微信查询中 支付未完成

--- a/src/main/webapp/wechatbooking/customer/templates/WfrmHotelFacility.html
+++ b/src/main/webapp/wechatbooking/customer/templates/WfrmHotelFacility.html
@@ -35,12 +35,12 @@
 	<body>
 		<header data-am-widget="header" class="am-header am-header-default">
 		  	<h1 class="am-header-title">
-			    <span id="hotel_name">天财大酒店</span>
+			    <span id="hotel_name"></span>
 		  	</h1>	
 		</header>
 	    <div class="am-panel am-panel-default">
 	        <div class="am-panel-bd" id="hotel_desp">
-	            test2
+	            
 	        </div>
 	    </div>
     	<section data-am-widget="accordion" class="am-accordion am-accordion-gapped" data-am-accordion='{  }'>
@@ -49,14 +49,7 @@
 			    <dd class="am-accordion-bd am-collapse am-in">
 			      <!-- 规避 Collapase 处理有 padding 的折叠内容计算 计算有误的问题, 加一个容器 -->
 			      <div class="am-accordion-content" id="room_menu">
-			      	<li>
-			      		<fieldset class='ui-grid-a'>
-			      			<div class='ui-block-a'>洗浴</div>
-			      			<div class='ui-block-a'>
-			      				<pre>洗浴相关描述</pre>
-			      			</div>
-			      		</fieldset>
-			      	</li>
+			      	
 			      </div>
 			    </dd>
 	  		</dl>
@@ -65,7 +58,7 @@
     			<dd class="am-accordion-bd am-collapse ">
 		    	    <!-- 规避 Collapase 处理有 padding 的折叠内容计算 计算有误的问题, 加一个容器 -->
 		 			<div class="am-accordion-content" id="multiple_menu">
-		 				综合设施
+		 				
 		 			</div>
    				</dd>
  			</dl>
@@ -74,7 +67,6 @@
 	   			<dd class="am-accordion-bd am-collapse ">
 		     		<!-- 规避 Collapase 处理有 padding 的折叠内容计算 计算有误的问题, 加一个容器 -->
 		     		<div class="am-accordion-content" id="server_menu">
-		     			服务项目
 		     		</div>
 		   		</dd>
 	 		</dl>
@@ -83,7 +75,6 @@
 	   			<dd class="am-accordion-bd am-collapse ">
 	     		<!-- 规避 Collapase 处理有 padding 的折叠内容计算 计算有误的问题, 加一个容器 -->
 		     		<div class="am-accordion-content" id="entertainment_menu">
-		     			娱乐设施
 		     		</div>
 	 			</dl>
 		</section>
