--- a/src/main/webapp/wechatbooking/customer/templates/WfrmOrderIdentify.html
+++ b/src/main/webapp/wechatbooking/customer/templates/WfrmOrderIdentify.html
@@ -31,6 +31,13 @@
 	    <script src="../api/AmazeUI/js/amazeui.min.js"></script>
 	    <!--<![endif]-->
 	    <script src="../api/AmazeUI/js/app.js"></script>
+	    <style type="text/css">
+	    	.order-button{
+	    		color: black;
+	    		font-weight: 700;
+	    		font-size: 18px;
+	    	}
+	    </style>
 	</head>
 	<body style="background-color: Menu;">
 		<header data-am-widget="header" class="am-header am-header-default">
@@ -133,10 +140,32 @@
                 	<i class="am-icon-shopping-cart"></i> 前台支付
             	</button>
             	<button type="button" class="am-btn am-btn-success  am-btn-block am-round"
-            		onclick="onclick_pay()">
+            		onclick="onclick_pay()" data-am-modal="{target: '#my-actions'}">
                 	 立即支付
             	</button>
 			</div>
 		</div> 	
 	</body>
+	<!--支付弹出选项-->
+	<div class="am-modal-actions" id="my-actions">
+	  	<div class="am-modal-actions-group">
+		    <ul class="am-list">
+		      <li class="am-modal-actions-header" style="cursor: pointer;" 
+		      	onclick="onclick_pay('crm_pay')">
+		      	<span class="order-button">CRM支付</span>
+		      </li>
+		      <li class="am-modal-actions-header" style="cursor: pointer;" 
+		      	onclick="onclick_pay('wechat_pay')">
+		      	<span class="order-button">微信支付</span>
+		      </li>
+		      <li class="am-modal-actions-header" style="cursor: pointer;" 
+		      	onclick="onclick_pay('alibaba_pay')">
+		        <span class="order-button">支付宝支付</span>
+		      </li>
+		    </ul>
+	  	</div>
+	  	<div class="am-modal-actions-group">
+	    	<button class="am-btn am-btn-secondary am-btn-block" data-am-modal-close>取消</button>
+	  	</div>
+	</div>
 </html>
