生成订单联调支付

--- a/src/main/webapp/wechatbooking/customer/templates/WfrmBookDetail.html
+++ b/src/main/webapp/wechatbooking/customer/templates/WfrmBookDetail.html
@@ -68,8 +68,11 @@
 		                    </select>
 		                    <span class="am-form-caret"></span>
 		                    <input type="text" id="orderName" placeholder="联系人">
+		                    	<span id="customer-msg" style="color: red;"></span>
 		                    <input type="text" id="orderTel" placeholder="手机号">
+		                    	<span id="phone-msg" style="color: red;"></span>
 		                    <input type="text" id="orderIDCard" placeholder="身份证">
+		                    	<span id="idCard-msg" style="color: red;"></span>
 	                    </form>
 	                </div>
 	            </div>
