--- a/src/main/webapp/wechatbooking/customer/templates/WfrmOrderIdentify.html
+++ b/src/main/webapp/wechatbooking/customer/templates/WfrmOrderIdentify.html
@@ -19,6 +19,7 @@
 	    <script src="../api/Echart/dist/echarts.js"></script>	    
 	    <script src="../js/WfrmOrderIdentify.js"></script>
 	    <script src="../js/common.js"></script>
+	    <script src="../js/resource.js"></script>
 	    <!--[if lt IE 9]>
 	    <script src="http://libs.baidu.com/jquery/1.11.1/jquery.min.js"></script>
 	    <script src="http://cdn.staticfile.org/modernizr/2.8.3/modernizr.js"></script>
@@ -157,10 +158,6 @@
 		      <li class="am-modal-actions-header" style="cursor: pointer;" 
 		      	onclick="onclick_pay('wechat_pay')">
 		      	<span class="order-button">微信支付</span>
-		      </li>
-		      <li class="am-modal-actions-header" style="cursor: pointer;" 
-		      	onclick="onclick_pay('alibaba_pay')">
-		        <span class="order-button">支付宝支付</span>
 		      </li>
 		    </ul>
 	  	</div>
