--- a/src/main/webapp/wechatbooking/customer/templates/WfrmMyOrder.html
+++ b/src/main/webapp/wechatbooking/customer/templates/WfrmMyOrder.html
@@ -19,6 +19,7 @@
 	    <script src="../api/Echart/dist/echarts.js"></script>	    
 	    <script src="../js/WfrmMyOrder.js"></script>
 	    <script src="../js/common.js"></script>
+	    <script src="../js/resource.js"></script>
 	    <!--[if lt IE 9]>
 	    <script src="http://libs.baidu.com/jquery/1.11.1/jquery.min.js"></script>
 	    <script src="http://cdn.staticfile.org/modernizr/2.8.3/modernizr.js"></script>
@@ -31,6 +32,13 @@
 	    <script src="../api/AmazeUI/js/amazeui.min.js"></script>
 	    <!--<![endif]-->
 	    <script src="../api/AmazeUI/js/app.js"></script>
+	    <style type="text/css">
+	    	.order-button{
+	    		color: black;
+	    		font-weight: 700;
+	    		font-size: 18px;
+	    	}
+	    </style>
 	</head>
 	<body>
 		 <!--[if lte IE 9]>
@@ -66,32 +74,7 @@
 	        </ul>
 	        <div class="am-tabs-bd">
 	            <div class="am-tab-panel am-fade am-active am-in" id="tab2-1">
-	                <!--<div class='am-panel am-panel-default'>
-                    <div class='am-panel-bd'>
-                        <strong>{0}</strong>
-                        <br />
-                        <p>
-                            入住 <strong>{4}</strong> (住{6}晚) </p>
-                        <p>
-                            <i class='am-icon-info am-icon-sm'></i>&nbsp;&nbsp;{8}<br />
-                        </p>
-                        <p>
-                            <i class='am-icon-phone am-icon-sm'></i>&nbsp;&nbsp;{3}<br />
-                         <p>
-                            <i class='am-icon-user am-icon-sm'></i>&nbsp;&nbsp;{2}<br /></p>
-                        <hr />
-                        <p>
-                            订单状态：到店支付 ￥{1}</p>
-                        <button type='button' class='am-btn am-btn-warning am-btn-xl am-btn-block'
-                        	onclick="onclick_pay()">
-                            立即支付
-                        </button>
-                        <button type='button' class='am-btn am-btn-warning am-btn-xl am-btn-block' 							onclick="onclick_cancelOrder()">
-                            取消订单
-                        </button>
-                    </div>
-                </div>
-	            </div>-->	            
+	                	            
 	        	</div>
 	        	<div class="am-tab-panel am-fade" id="tab2-2">
             	</div>
@@ -112,5 +95,23 @@
 	    		</div>
 	  		</div>
   		</div>
+  		<!--支付弹出选项-->
+		<div class="am-modal-actions" id="my-actions">
+		  	<div class="am-modal-actions-group">
+			    <ul class="am-list">
+			      <li class="am-modal-actions-header" style="cursor: pointer;" 
+			      	onclick="onclick_pay('crm_pay')">
+			      	<span class="order-button">CRM支付</span>
+			      </li>
+			      <li class="am-modal-actions-header" style="cursor: pointer;" 
+			      	onclick="onclick_pay('wechat_pay')">
+			      	<span class="order-button">微信支付</span>
+			      </li>
+			    </ul>
+		  	</div>
+		  	<div class="am-modal-actions-group">
+		    	<button class="am-btn am-btn-secondary am-btn-block" data-am-modal-close>取消</button>
+		  	</div>
+		</div>
 	</body>
 </html>
