修改订单详情列表中表头对于不同宽度的显示方式 --表头的最小显示宽度根据该列显示内容的最小宽度而定

--- a/src/main/webapp/wechatbooking/management/templates/WfrmOrderDetail.html
+++ b/src/main/webapp/wechatbooking/management/templates/WfrmOrderDetail.html
@@ -51,7 +51,7 @@
 	            </div>
 	            <div class="am-panel-bd">
 	                <div class="am-scrollable-horizontal">
-	                    <table id="example" class="am-table am-table-bd am-table-hover  admin-content-table am-text-nowrap">
+	                    <table id="example" class="display">
 	                        <thead>
 	                            <tr>                                        
 	                                <th>
