--- a/src/main/webapp/wechatbooking/customer/templates/WfrmOrderIdentify.html
+++ b/src/main/webapp/wechatbooking/customer/templates/WfrmOrderIdentify.html
@@ -141,7 +141,7 @@
                 	<i class="am-icon-shopping-cart"></i> 前台支付
             	</button>
             	<button type="button" class="am-btn am-btn-success  am-btn-block am-round"
-            		onclick="onclick_pay()" data-am-modal="{target: '#my-actions'}">
+            		data-am-modal="{target: '#my-actions'}">
                 	 立即支付
             	</button>
 			</div>
