--- a/src/main/webapp/wechatbooking/management/templates/WfrmLogin.html
+++ b/src/main/webapp/wechatbooking/management/templates/WfrmLogin.html
@@ -52,23 +52,15 @@
             </div>
             <div class="am-form">
                 <label for="shopid">商户号:</label>
-                <input type="text" name="" id="shopid" value="">
+                <input type="text" name="" id="shopid" value="" maxlength="15">
                 <label for="password" style="margin-top: 18px;">密码:</label>
-                <input type="password" name="" id="password" value="">
+                <input type="password" name="" id="password" value="" maxlength="15">
                 <br>
-                <!--   <label for="remember-me">
-                    <input id="remember-me" type="checkbox">
-                    记住密码
-                </label>-->
                 <br />
                 <div class="am-cf">
-                    <!--  <input type="submit" onclick="login()" name="" value="登 录" class="am-btn am-btn-primary am-btn-sm am-fl">-->
                     <button type="button" onclick="login()" id="btnLogin"  onkeypress="keydownMsg(event)"
                         class="am-btn am-btn-primary am-btn-sm  am-fl">
                         登 录</button>
-                   <!-- <button class="am-btn am-btn-default am-btn-sm am-fr" data-am-popover="{content: '请联系大表哥'}">
-                        忘记密码 ^_^?
-                    </button>-->
                 </div>
             </div>
             <hr>
