将访问图片路径，修改成通过resource.js配置。 支付部分使用mcId=5678可以成功跳转到支付页面，完成第一轮测试

--- a/src/main/webapp/wechatbooking/management/templates/WfrmPhotoDetail.html
+++ b/src/main/webapp/wechatbooking/management/templates/WfrmPhotoDetail.html
@@ -17,6 +17,7 @@
 	    <script src="../api/jQuery/jquery.min.js"></script>
 	    <script src="../api/webuploader/webuploader.js"></script>
 	    <script src="../js/common.js"></script>
+	    <script src="../js/resource.js"></script>
 	    <script src="../js/WfrmPhotoDetail.js"></script>
 	    <!--[if lt IE 9]>
 		<script src="http://libs.baidu.com/jquery/1.11.1/jquery.min.js"></script>
