--- a/src/main/webapp/wechatbooking/management/templates/WfrmRoomGallery.html
+++ b/src/main/webapp/wechatbooking/management/templates/WfrmRoomGallery.html
@@ -17,6 +17,7 @@
 	    <script src="../api/jQuery/jquery.min.js"></script>
 	    <script src="../js/WfrmRoomGallery.js"></script>
 	    <script src="../js/common.js"></script>
+	    <script src="../js/resource.js"></script>
 	    <!--[if lt IE 9]>
 		<script src="http://libs.baidu.com/jquery/1.11.1/jquery.min.js"></script>
 		<script src="http://cdn.staticfile.org/modernizr/2.8.3/modernizr.js"></script>
