--- a/src/main/webapp/wechatbooking/management/templates/WfrmRoomPhoto.html
+++ b/src/main/webapp/wechatbooking/management/templates/WfrmRoomPhoto.html
@@ -15,6 +15,7 @@
 	    <link rel="stylesheet" href="../api/AmazeUI/css/admin.css">
 	    <script src="../js/WfrmRoomPhoto.js"></script>
 	    <script src="../js/common.js"></script>
+	    <script src="../js/resource.js"></script>
 	    <!--[if lt IE 9]>
 		<script src="http://libs.baidu.com/jquery/1.11.1/jquery.min.js"></script>
 		<script src="http://cdn.staticfile.org/modernizr/2.8.3/modernizr.js"></script>
