--- a/src/main/webapp/wechatbooking/management/templates/WfrmServerFacilityMatain.html
+++ b/src/main/webapp/wechatbooking/management/templates/WfrmServerFacilityMatain.html
@@ -18,6 +18,7 @@
 	    <script src="../api/webuploader/webuploader.js"></script>
 	    <script src="../js/WfrmServerFacilityMatain.js"></script>
 		<script src="../js/common.js"></script>
+		<script src="../js/resource.js"></script>
 
 	    <!--[if lt IE 9]>
 		<script src="http://libs.baidu.com/jquery/1.11.1/jquery.min.js"></script>
