--- a/src/main/webapp/wechatbooking/customer/templates/WfrmBookDetail.html
+++ b/src/main/webapp/wechatbooking/customer/templates/WfrmBookDetail.html
@@ -68,7 +68,7 @@
 		                        <option value='2'>2间</option>-->
 		                    </select>
 		                    <span class="am-form-caret"></span>
-		                    <input type="text" id="orderName" placeholder="联系人">
+		                    <input type="text" id="orderName" placeholder="联系人" maxlength="15">
 		                    	<span id="customer-msg" style="color: red;"></span>
 		                    <input type="text" id="orderTel" placeholder="手机号">
 		                    	<span id="phone-msg" style="color: red;"></span>
