--- a/src/main/webapp/wechatbooking/management/templates/WfrmHotelInfo.html
+++ b/src/main/webapp/wechatbooking/management/templates/WfrmHotelInfo.html
@@ -18,6 +18,7 @@
 	    <script src="../api/webuploader/webuploader.js"></script>
 	    <script src="../js/WfrmHotelInfo.js"></script>
 		<script src="../js/common.js"></script>
+		<script src="../js/resource.js"></script>
 	    <!--[if lt IE 9]>
 		<script src="http://libs.baidu.com/jquery/1.11.1/jquery.min.js"></script>
 		<script src="http://cdn.staticfile.org/modernizr/2.8.3/modernizr.js"></script>
@@ -37,7 +38,6 @@
                 <strong class="am-text-primary am-text-lg">酒店信息维护</strong> / 				<small>Edit</small>
             </div>
         </div>
-        
         <div class="am-tabs am-margin" data-am-tabs>
             <ul class="am-tabs-nav am-nav am-nav-tabs">
                 <li class="am-active">
@@ -58,7 +58,6 @@
 									   type="text" id="hotel_name" class="am-form-field am-input-sm " placeholder="请输入酒店名称   必填">
 							</div>
 							<div class="am-hide-sm-only am-u-md-6" id="hotel_name_msg"> <!-- 酒店名称错误提示信息 -->
-                            	
 						    </div>
 						</div>
 						<!-- 联系电话 -->
@@ -87,6 +86,7 @@
 
 						    </div>
 						</div>
+                        <!-- 内容描述 -->
                         <div class="am-g am-margin-top-sm">
                             <div class="am-u-sm-12 am-u-md-2 am-text-right admin-form-text">
                                 内容描述
@@ -96,18 +96,18 @@
 										  Rows="9" class="am-form-field am-input-sm" placeholder="请输入内容描述"></textarea>
                             </div>
                         </div>
-                    </div>
+                    </form>
                 </div>
-                
             </div>
         </div>
+        <!-- 保存按钮 -->
         <div class="am-margin">
             <button type="button" onclick="onclick_btnSave()" class="am-btn am-btn-primary am-btn-xs">
             	保存
             	<i class="am-icon-spinner am-icon-spin" style="display:none" id="saveIcon"></i>
             </button>
         </div>
-        </form>
+        <!-- 保存成功提示 -->
         <div class="am-modal am-modal-alert" tabindex="-1" id="my-alert">
             <div class="am-modal-dialog">
                 <div class="am-modal-hd">
