--- a/src/main/webapp/wechatbooking/management/templates/WfrmOrderDetail.html
+++ b/src/main/webapp/wechatbooking/management/templates/WfrmOrderDetail.html
@@ -20,6 +20,7 @@
 	    <script src="../api/Echart/dist/echarts.js"></script>
 	    <script src="../js/WfrmOrderDetail.js"></script>
 	    <script src="../js/common.js"></script>
+		<script src="../js/resource.js"></script>
 	    <!--[if lt IE 9]>
 	    <script src="http://libs.baidu.com/jquery/1.11.1/jquery.min.js"></script>
 	    <script src="http://cdn.staticfile.org/modernizr/2.8.3/modernizr.js"></script>
