--- a/src/main/webapp/wechatbooking/management/templates/WfrmOrderStatistics.html
+++ b/src/main/webapp/wechatbooking/management/templates/WfrmOrderStatistics.html
@@ -18,6 +18,7 @@
 	    <script src="../api/Echart/dist/echarts.js"></script>
 	    <script src="../js/WfrmOrderStatistics.js"></script>
 	    <script src="../js/common.js"></script>
+	    <script src="../js/resource.js"></script>
 	    <!--[if lt IE 9]>
 	    <script src="http://libs.baidu.com/jquery/1.11.1/jquery.min.js"></script>
 	    <script src="http://cdn.staticfile.org/modernizr/2.8.3/modernizr.js"></script>
