modify hotelDetai init

--- a/src/main/webapp/wechatbooking/customer/templates/WfrmHotelDetail.html
+++ b/src/main/webapp/wechatbooking/customer/templates/WfrmHotelDetail.html
@@ -78,14 +78,10 @@
 		</div>
 		<div class="am-g">
 	  		<div class="am-u-sm-6">
-			    <button type="button" class="am-btn am-btn-default am-margin-right" id="my-start">
-			    	开始日期
-			    </button><span id="my-startDate"></span>
+			    <input type="text" class="am-form-field" placeholder="开始时间" data-am-datepicker readonly required id="my-start"/>
 	  		</div>
 	  		<div class="am-u-sm-6">
-			    <button type="button" class="am-btn am-btn-default am-margin-right" id="my-end" >
-			    	结束日期
-			    </button><span id="my-endDate"></span>
+	  			<input type="text" class="am-form-field" placeholder="结束日期" data-am-datepicker readonly required id="my-end"/>  
 	  		</div>
 		</div>
 	    <div data-am-widget="list_news" class="am-list-news am-list-news-default">
