--- a/src/main/webapp/wechatbooking/customer/templates/WfrmOrderSearch.html
+++ b/src/main/webapp/wechatbooking/customer/templates/WfrmOrderSearch.html
@@ -3,8 +3,8 @@
 	<head>
 		<meta charset="utf-8">
 	    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-	    <title>酒店列表</title>
-	    <meta name="description" content="预订/我的订单">
+	    <title>微信查询</title>
+	    <meta name="description" content="微信订单查询">
 	    <meta name="keywords" content="index">
 	    <meta name="viewport" content="width=device-width, initial-scale=1,maximum-scale=1,user-scalable=no">
 	    <meta name="renderer" content="webkit">
@@ -17,7 +17,7 @@
 	    <link rel="stylesheet" type="text/css" href="../api/webuploader/webuploader.css" />
 	    <script src="../api/jQuery/jquery.min.js"></script>
 	    <script src="../api/Echart/dist/echarts.js"></script>	    
-	    <script src="../js/WfrmMain.js"></script>
+	    <script src="../js/WfrmOrderSearch.js"></script>
 	    <script src="../js/common.js"></script>
 	    <script src="../js/resource.js"></script>
 	    <!--[if lt IE 9]>
